# myddsp

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  VERSION  conftest.py  mkdocs.yml  pyproject.toml  pyrightconfig.example.json  versions.json
.dvc/: config
0.1.0/: index.html  objects.inv
0.1.0/search/: search_index.json
0.1.1-dev1/: index.html  objects.inv
0.1.1-dev1/search/: search_index.json
0.1.1-dev3/: index.html  objects.inv
0.1.1-dev3/search/: search_index.json
0.2.0-dev1/: 404.html  index.html  objects.inv
0.2.0-dev1/search/: search_index.json
checkpoints/crepe/: .gitignore  full.pth.dvc  tiny.pth.dvc
data/test/samples/: .gitignore  violin-1.wav.dvc  violin-2.wav.dvc  violin-3.wav.dvc  violin-4.wav.dvc  violin.wav.dvc
docs/: index.md
latest/: 404.html  index.html
notebooks/: ChatGPT Code.ipynb  StyleGAN 3 Audio.ipynb  explore-audio-preprocessing.ipynb  train test.ipynb
notebooks/.ipynb_checkpoints/: explore-audio-preprocessing-checkpoint.ipynb
src/myddsp/: __init__.py  cli.py  constants.py  crepe.py  preprocessors.py  train.py  vae.py
src/tests/: test_preprocessors.py
