[tool.poetry]
name = "myddsp"
version = "0.2.0-dev1"
description = "48kHz stereo DDSP"
authors = ["kureta <skureta@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/kureta/myddsp"
repository = "https://github.com/kureta/myddsp"
documentation = "https://kureta.github.io/myddsp"
keywords = ["audio", "dsp", "signalprocessing", "machinelearning", "music"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA :: 11.7",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
    { include = "myddsp", from = "src" },
]

[tool.poetry.scripts]
myddsp = 'myddsp.cli:run'

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.0"
torchvision = "^0.14.0"
torchaudio = "^0.13.0"
auraloss = "^0.2.2"
pytorch-lightning = {extras = ["extra"], version = "^1.7.7"}
librosa = "^0.9.2"
jsonargparse = {extras = ["signatures"], version = "^4.16.0"}
wandb = "^0.13.4"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"
einops = "^0.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
dvc = {extras = ["gdrive", "s3", "ssh"], version = "^2.32.0"}
mike = "^1.1.2"
pytest = "^7.2.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
nbstripout = "^0.6.1"
black = {extras = ["d"], version = "^22.10.0"}
coverage = "^6.5.0"
hypothesis = {extras = ["numpy"], version = "^6.56.4"}
python-dotenv = "^0.21.0"
pyright = "^1.1.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
